various alignment fixes

--- a/src/css/ChartSideBar.css
+++ b/src/css/ChartSideBar.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1100px)  {
+@media only screen and (min-width: 1001px)  {
   .chart-side-bar {
     margin-top: 31%; 
   }
